--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.google.android.c2dm.permission.Reciever"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.Reciever" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HemoShare"
         tools:targetApi="31">
+        <activity
+            android:name=".RequestsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".RequestBloodActivity"
             android:exported="false">
@@ -71,13 +78,13 @@
                 android:value="" />
         </activity>
 
-        <service android:name=".messaging.FirebaseService"
-            android:permission="com.google.android.c2dm.permission.Send"
-            android:exported="true">
+        <service
+            android:name=".messaging.FirebaseService"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.Send">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-                <action android:name="com.google.android.c2dm.intent.Recieve"/>
-
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.Recieve" />
             </intent-filter>
         </service>
     </application>
