--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.Reciever" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -15,6 +19,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HemoShare"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCIvNWWh69FMQ-y4g8TBknXQl3tC4cKoGk" />
+
+        <activity
+            android:name=".SelectLocationActivity"
+            android:exported="false" />
         <activity
             android:name=".RequestsActivity"
             android:exported="false">
@@ -80,7 +92,7 @@
 
         <service
             android:name=".messaging.FirebaseService"
-            android:exported="true"
+            android:exported="false"
             android:permission="com.google.android.c2dm.permission.Send">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
